--- a/layouts/account.jade
+++ b/layouts/account.jade
@@ -10,8 +10,8 @@ html
     div.navbar.navbar-default.navbar-fixed-top
       div.container
         div.navbar-header
-          a.navbar-brand(href='/account/')
-            img.navbar-logo(src='/media/logo-symbol-64x64.png', alt='Logo')
+          a.navbar-brand(href='/')
+            img.navbar-logo(src='/media/toggle.png', alt='Logo')
             span.navbar-brand-label #{projectName}
           button.navbar-toggle.collapsed(data-toggle='collapse', data-target='.my-navbar-collapse')
             span.icon-bar
@@ -19,7 +19,7 @@ html
             span.icon-bar
         div.navbar-collapse.my-navbar-collapse.collapse
           ul.nav.navbar-nav
-            li: a(href='/account/') My Account
+            // li: a(href='/account/') My Account
             li: a(href='/account/settings/') Settings
           ul.nav.navbar-nav.pull-right
             li: a(href='/logout/')
