--- a/views/index.jade
+++ b/views/index.jade
@@ -1,37 +1,64 @@
 extends ../layouts/default
 
 block head
-  title Drywall is Running
+  title VoteTime
 
 block neck
   link(rel='stylesheet', href='/views/index.min.css?#{cacheBreaker}')
+  script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js')
+  script(src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.4/Chart.bundle.min.js')  
 
 block body
   div.jumbotron
-    h1 Success
+    h1.leadTitle VoteTime
     p.lead
-      | Your Node.js website and user system is running. May the force be with you.
-    div
-      a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
-      | &nbsp;or&nbsp;
-      a.btn.btn-warning.btn-lg(href='/login/forgot/') Reset Your Password
+      | Create a poll. View live results.
+    if !user.username  
+      div
+        a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
+    if user.username
+      div
+        a.btn.btn-success.btn-lg.homebutton(href='/mypolls/') New Poll
+        a.btn.btn-primary.btn-lg(href='/mypolls/') My Polls
     div.clearfix
   div.row
     div.col-sm-4
       div.panel.panel-default
         div.panel-body
-          h3 About Us
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/about/') Learn More
-    div.col-sm-4
+          h3 Live Results
+          p Live graphs show your results immediately in an easy to understand format
+      if !user.username        
+        div.panel.panel-default
+          div.panel-body
+            h3 Create an Account
+            p Manage your own polls and create custom poll answers when responding to an existing poll
+            a.btn.btn-primary.btn-sm(href='/signup/') Create
+    div.col-sm-8
       div.panel.panel-default
         div.panel-body
-          h3 Sign Up
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/signup/') Learn More
-    div.col-sm-4
-      div.panel.panel-default
-        div.panel-body
-          h3 Contact Us
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/contact/') Learn More
+          h3 Featured Poll
+          div.container
+            div.row
+              p.lead
+                span.bigq Q.
+                =question 
+          div
+            canvas#myChart(width="400" height="200")
+            script.
+              $(document).ready(function(){
+                var ctx = document.getElementById("myChart");
+                var myChart = new Chart(ctx, {
+                    type: 'bar',
+                    data: !{JSON.stringify(data)},  
+                    options: {
+                        scales: {
+                            yAxes: [{
+                                ticks: {
+                                    beginAtZero:true
+                                }
+                            }]
+                        }
+                    }
+                });
+              });
+
