--- a/public/layouts/core.less
+++ b/public/layouts/core.less
@@ -8,6 +8,10 @@ h1, h2 {
   letter-spacing: -1px;
 }
 
+a:hover {
+  text-decoration: none;
+}
+
 .mypolls {
   margin-bottom: 50px;
 }
@@ -136,8 +140,8 @@ input, .form-control {
   border-top:none!important;
 }
 .builtby>p {
-  font-style: italic;
-  line-height: 9px;
+  font-style: normal;
+  line-height: 11px;
 }
 
 .footer a {
