--- a/views/index.jade
+++ b/views/index.jade
@@ -41,7 +41,7 @@ block body
             div.row
               p.lead
                 span.bigq Q.
-                =question 
+                |<a href='/polls/Mu10By3x'> #{question} </a>
           div
             canvas#myChart(width="400" height="200")
             script.
