--- a/public/layouts/core.less
+++ b/public/layouts/core.less
@@ -160,9 +160,32 @@ input, .form-control {
 
 .form-submit {
   position: relative;
-  top: 40px;
+  top: 20px;
+  background: #3c5b9b;
 }
 
+.submitbutton {
+  margin-bottom: 30px;
+}
+
+#share-buttons img {
+  width: 35px;
+  padding: 0px;
+  border: 0;
+  box-shadow: 0;
+  display: inline;
+  position: relative;
+  top:0;
+}
+
+.facebook-share {
+  position: relative;
+  top:0;
+  background: #3c5b9b;
+  padding-left: 10px;
+  width:80%;
+  height: 40px;
+}
 .page-header {
   border-bottom: none;
 }
