--- a/views/mypolls/index.jade
+++ b/views/mypolls/index.jade
@@ -53,7 +53,7 @@ block neck
               success: function (result) {
                 console.log(result);
                 if(result.status == 200){
-                  console.log("divId", divId);
+                  console.log("Deleted Poll");
                   $(divId).hide();
                 }
               },
